monitoringchart/ingress-grafana.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
  annotations:
  cert-manager.io/cluster-issuer: cert-manager-webhook-duckdns-production
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - grafana-kubequest.duckdns.org
      secretName: grafana-tls
  rules:
    - host: grafana-kubequest.duckdns.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 80
