monitoringchart/ingress-prometheus.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: monitoring
  annotations:
  cert-manager.io/cluster-issuer: cert-manager-webhook-duckdns-production
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - prometheus-kubequest.duckdns.org
      secretName: prometheus-tls
  rules:
    - host: prometheus-kubequest.duckdns.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus
                port:
                  number: 9090
